--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "cross-env": "^7.0.3",
     "rollup": "^2.37.1",
     "rollup-plugin-babel": "^4.4.0",
